Fix formatting and typos in index.html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <p>El negocio de maduración de banano ofrece un flujo de ingresos continuo y se puede diversificar la
             inversión
             al albergar otras frutas en distintas temporadas.
-
+            <br> <br>
             Las cámaras de maduración son ambientes que son mantenidos a una temperatura definida que permita la
             correcta
             maduración de los productos en su interior, previniendo la sobre maduración y que se vean afectados por
@@ -105,7 +105,7 @@
           <p>El nuevo mega puerto de Chancay abre las puertas para el negocio de los terrenos, los cuales, según el
             mismo
             gobierno, podrán aumentar en valor de 5 a 10 veces.
-
+            <br> <br>
             Ofrecemos la posibilidad de que inviertas con seguridad en la adquisición de terrenos amplios que otorgarán
             un
             rendimiento seguro en unos años. Tenemos todos los papeles en regla y muchas personas ya confían en
@@ -123,8 +123,9 @@
           <p>Iquitos, la joya de la Amazonía Peruana, tiene muchos espacios en los cuales invertir, en esta ocasión son
             terrenos amplios que pueden ser usados para diferentes actividades. Estos terrenos estratégicamente ubicados
             cuentan con un alto potencial de revalorización a corto y mediano plazo.
-
-            Contamos con expertos que te asesorarán en todo el proceso para que puedas invertir segur</p>
+            <br><br>
+            Contamos con expertos que te asesorarán en todo el proceso para que puedas invertir segur
+          </p>
         </div>
       </div>
     </div>
@@ -230,7 +231,7 @@
                   <div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text"
                       name="b_8b7f686722931bd734a2e7d9b_5ce211eaf0" tabindex="-1" value=""></div>
                   <div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
-                      value="Subscríbete"></div>
+                      value="Suscríbete"></div>
                 </div>
               </form>
             </div>
@@ -391,7 +392,7 @@
   }
 
   .link {
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: #fff;
     font-weight: bold;
 
