--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./css/styles.css" />
   <title>Vive Rentable</title>
+  <meta property="og:locale" content="es_ES">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Vive rentable">
+  <meta property="og:description" content="La clave para una inversión diversificada y rentable ">
+  <meta property="og:url" content="vive-rentable.com">
+  <meta property="og:image" content="./assets/logo2.jpg">
+
 
   <!-- font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
