Update subscription form labels

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 target="_self" novalidate="">
                 <div id="mc_embed_signup_scroll">
                   <h2>Suscríbete</h2>
-                  <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                  <div class="indicates-required"><span class="asterisk">*</span> campos requeridos</div>
                   <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
                         class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email"
                       id="mce-EMAIL" required="" value=""></div>
