--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -1079,7 +1079,7 @@
                             class="validate" target="_self" novalidate="">
                             <div id="mc_embed_signup_scroll">
                                 <h2>Suscríbete</h2>
-                                <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                                <div class="indicates-required"><span class="asterisk">*</span>Campos requeridos</div>
                                 <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
                                             class="asterisk">*</span></label><input type="email" name="EMAIL"
                                         class="required email" id="mce-EMAIL" required="" value=""></div>
@@ -1095,7 +1095,7 @@
                                 <div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text"
                                         name="b_8b7f686722931bd734a2e7d9b_5ce211eaf0" tabindex="-1" value=""></div>
                                 <div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe"
-                                        class="button" value="Subscribe"></div>
+                                        class="button" value="Suscribirse"></div>
                             </div>
                         </form>
                     </div>
