--- a/Landing_webinar_mb.html
+++ b/Landing_webinar_mb.html
@@ -1143,7 +1143,7 @@
                             class="validate" target="_blank">
                             <div id="mc_embed_signup_scroll" class="animate-bg">
                                 <h4>¡Descubre cómo hacerlo en nuestro webinar exclusivo!.</h4>
-                                <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                                <div class="indicates-required"><span class="asterisk">*</span> Campos requeridos</div>
                                 <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
                                             class="asterisk">*</span></label><input type="email" name="EMAIL"
                                         class="required email" id="mce-EMAIL" required="" value=""></div>
@@ -1163,7 +1163,7 @@
                                 <div class="optionalParent">
                                     <div class="clear foot">
                                         <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
-                                            value="Enviar">
+                                            value="Suscribirse">
                                         <p style="margin: 0px auto;"><a href="http://eepurl.com/iJLt9s"
                                                 title="Mailchimp - email marketing made easy and fun"><span
                                                     style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
