--- a/Landing_mb.html
+++ b/Landing_mb.html
@@ -145,8 +145,6 @@
     }
 
     .seccion_01 {
-        background-image: url('../assets/banner_img/bann.png');
-        background-size: cover;
         width: 100%;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -454,8 +452,6 @@
 
     /* --------------- */
     .seccion_04 {
-        background-image: url('../assets/banner_img/bann1.png');
-        background-size: cover;
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -722,34 +718,6 @@
         height: 100px;
     }
 
-    .popup {
-        display: none;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: #fff;
-        padding: 20px;
-        border: 1px solid #000000;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-        z-index: 9999;
-    }
-
-    .popup-content {
-
-        text-align: center;
-    }
-
-    .close {
-        padding-top: 0;
-        width: 30px;
-        color: #000;
-        position: absolute;
-        top: 5px;
-        right: 10px;
-        cursor: pointer;
-        font-size: 50px;
-    }
 
 
     @media only screen and (max-width: 600px) {
@@ -885,7 +853,7 @@
             /* Tamaño de las etiquetas de días, horas, minutos y segundos */
         }
 
-        .qr{
+        .qr {
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -1008,28 +976,6 @@
         .logo_negativo {
             width: 100px;
             height: 50px;
-        }
-
-        .popup {
-            margin: auto;
-            width: 300px;
-            height: 100%;
-        }
-
-        .popup-content {
-            width: 100%;
-            margin: auto;
-            text-align: center;
-        }
-
-        .close {
-            width: 30px;
-            color: #000;
-            position: absolute;
-            right: 10px;
-            cursor: pointer;
-            font-size: 50px;
-            z-index: 1;
         }
     }
 </style>
@@ -1192,7 +1138,7 @@
 
     <!-- MAILCHIMP -->
 
-    <article class="contador">
+    <!-- <article class="contador">
         <h2>FALTAN</h2>
         <div id="countdown"></div>
         <div class="count">
@@ -1208,16 +1154,17 @@
             <p>S</p>
         </div>
         <h3>PARA NUESTRO WEBINAR EXCLUSIVO</h3>
-    </article>
+    </article> -->
 
     <section class="qr">
+
+        <div class="s002">
+            <img src="./assets/qr.jpeg" alt="">
+        </div>
         <div class="s001">
             <h3>Únete a nuestro grupo de Whatsapp para mantenerte informado</h3>
             <a target="_blank" href="https://chat.whatsapp.com/LQmXWnpOib4IdmCPWuQ4zm">Ingresar</a>
 
-        </div>
-        <div class="s002">
-            <img src="./assets/qr.jpeg" alt="">
         </div>
 
     </section>
@@ -1225,7 +1172,7 @@
 
 
     <section class="seccion_04">
-        <div class="superior">
+        <!-- <div class="superior">
             <div class="cont img">
                 <img src="./assets/calendar-regular-24.png" alt="imagen">
                 <img src="./assets/time-five-regular-24.png" alt="imagen">
@@ -1239,7 +1186,7 @@
 
             </div>
 
-        </div>
+        </div> -->
         <div class="inferior">
             <div class="cont1">
                 <h2>¿QUÉ VERÁS <br> EN ESTE <br>WEBINAR?</h2>
@@ -1348,66 +1295,6 @@
         </div>
     </footer>
 
-    <div id="popup" class="popup">
-        <div class="popup-content">
-            <span class="close" onclick="closePopup()">&times;</span>
-            <section class="container section_div" id="contacto">
-                <div id="mc_embed_shell">
-                    <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet"
-                        type="text/css">
-
-                    <div id="mc_embed_signup">
-                        <form
-                            action="https://vive-rentable.us8.list-manage.com/subscribe/post?u=8b7f686722931bd734a2e7d9b&amp;id=5ce211eaf0&amp;f_id=001202e0f0"
-                            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
-                            class="validate" target="_blank">
-                            <div id="mc_embed_signup_scroll" class="animate-bg">
-                                <h4>Suscríbete</h4>
-                                <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-                                <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
-                                            class="asterisk">*</span></label><input type="email" name="EMAIL"
-                                        class="required email" id="mce-EMAIL" required="" value=""></div>
-                                <div class="mc-field-group"><label for="mce-FNAME">Nombre </label><input type="text"
-                                        name="FNAME" class=" text" id="mce-FNAME" value=""></div>
-                                <div class="mc-field-group"><label for="mce-PHONE">Número de teléfono </label><input
-                                        type="text" name="PHONE" class="REQ_CSS" id="mce-PHONE" value=""></div>
-                                <div hidden=""><input type="hidden" name="tags" value="5179777"></div>
-                                <div id="mce-responses" class="clear foot">
-                                    <div class="response" id="mce-error-response" style="display: none;"></div>
-                                    <div class="response" id="mce-success-response" style="display: none;"></div>
-                                </div>
-                                <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                                    <input type="text" name="b_8b7f686722931bd734a2e7d9b_5ce211eaf0" tabindex="-1"
-                                        value="">
-                                </div>
-                                <div class="optionalParent">
-                                    <div class="clear foot">
-                                        <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
-                                            value="Enviar">
-                                        <p style="margin: 0px auto;"><a href="http://eepurl.com/iJLt9s"
-                                                title="Mailchimp - email marketing made easy and fun"><span
-                                                    style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
-                                                        class="refferal_badge"
-                                                        src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
-                                                        alt="Intuit Mailchimp"
-                                                        style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                    <script type="text/javascript"
-                        src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-                    <script
-                        type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
-                </div>
-
-
-            </section>
-
-        </div>
-    </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
