--- a/gracias.html
+++ b/gracias.html
@@ -185,7 +185,7 @@
             <p>A Lima llegan diariamente más de 500,000 kg de banano, y no todos pasan por el servicio de cámara de
                 maduración porque la demanda está insatisfecha. ¿Te gustaría aprovechar esta oportunidad?</p>
         </div>
-        <p>En la reunión programada con nuestro asesor(a) Comercial <span>(COLOCAR LOS NOMBRES DEL ASESOR AGENDADO)</span> puedes sumergirte en el próspero negocio de las cámaras de maduración de banano</p>
+        <p>En la reunión programada con nuestro asesor(a) Comercial puedes sumergirte en el próspero negocio de las cámaras de maduración de banano</p>
 
             <h3>Mantente atento a tu bandeja de entrada, donde te proporcionaremos toda la información necesaria sobre la cita. </h3>
 
