Remove commented out code and add new text in Landing_maduracion.html

--- a/Landing_maduracion.html
+++ b/Landing_maduracion.html
@@ -163,7 +163,7 @@
 
     <!-- MAILCHIMP -->
 
-    <article class="contador">
+    <!-- <article class="contador">
         <h2>FALTAN</h2>
         <div id="countdown"></div>
         <div class="count">
@@ -179,7 +179,7 @@
             <p>S</p>
         </div>
         <h3>PARA NUESTRO WEBINAR EXCLUSIVO</h3>
-    </article>
+    </article> -->
 
     <section class="qr">
         <div class="s001">
@@ -224,6 +224,8 @@
                     preocupación de la gestión operativa y comercial.</p>
                 <p>✅ Estrategias para asegurar ingresos diarios y un rápido retorno de la inversión.</p>
                 <p>✅ Oportunidad de hacer preguntas en vivo durante el webinar.</p>
+
+                <p>✅ ¡Regístrate ahora para asegurar tu lugar en este webinar exclusivo y descubre cómo puedes obtener ingresos pasivos invirtiendo en cámaras de maduración de banano! </p>
 
             </div>
 
