--- a/index.html
+++ b/index.html
@@ -334,39 +334,40 @@
   </footer>
 
 </body>
+
 <style>
   * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Inter", sans-serif;
-}
+  }
 
-header {
+  header {
     height: 100vh;
     background-color: #005E6D;
-}
+  }
 
-a {
+  a {
 
     text-decoration: none;
-}
+  }
 
-ol,
-ul {
+  ol,
+  ul {
     list-style: none;
-}
+  }
 
-.logo {
+  .logo {
     width: 80px;
-}
+  }
 
-.header {
+  .header {
 
     height: 90px;
-}
+  }
 
-.navbar {
+  .navbar {
     height: 100%;
     display: flex;
     justify-content: space-between;
@@ -374,9 +375,9 @@ ul {
     flex-wrap: wrap;
     position: relative;
     padding: 0 2rem;
-}
+  }
 
-.ul_links {
+  .ul_links {
     background-color: #00AE44;
     width: 100%;
     position: absolute;
@@ -391,68 +392,68 @@ ul {
     gap: 2rem;
     transition: 0.5s;
 
-}
+  }
 
-.list_icon {
+  .list_icon {
     color: white;
     cursor: pointer;
-}
+  }
 
-.link {
+  .link {
     font-size: 1.5rem;
     color: #fff;
     font-weight: bold;
 
-}
+  }
 
-.menu_hamburguesa {
+  .menu_hamburguesa {
     display: none;
-}
+  }
 
-.menu_hamburguesa:checked+.ul_links {
+  .menu_hamburguesa:checked+.ul_links {
     height: calc(100vh - 50vh);
 
 
-}
+  }
 
-@media(min-width:768px) {
+  @media(min-width:768px) {
     .header {
-        padding-block-start: 20px;
+      padding-block-start: 20px;
     }
 
     .logo {
-        width: 200px;
+      width: 200px;
     }
 
     .labe_hamburguesa {
-        display: none;
+      display: none;
     }
 
     .ul_links {
-        position: static;
-        width: auto;
-        flex-direction: row;
-        height: auto;
-        gap: 2rem;
-        background-color: transparent;
+      position: static;
+      width: auto;
+      flex-direction: row;
+      height: auto;
+      gap: 2rem;
+      background-color: transparent;
     }
 
     .link {
-        font-size: 1.2rem;
+      font-size: 1.2rem;
     }
 
     .link:hover {
-        color: #00AE44;
+      color: #00AE44;
     }
-}
+  }
 
-.banner {
+  .banner {
     padding: 30px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-}
+  }
 
-.b01 {
+  .b01 {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -461,9 +462,9 @@ ul {
     padding-left: 5rem;
     font-size: 1.5rem;
     color: #fff;
-}
+  }
 
-.b01 a {
+  .b01 a {
     margin-top: 10px;
     text-align: center;
     width: 220px;
@@ -474,46 +475,43 @@ ul {
     font-weight: 500;
     border-radius: 10px;
 
-}
+  }
 
-.b01 a:hover {
+  .b01 a:hover {
     background-color: #f2f2f2;
     color: #00AE44;
     transition: 0.3s;
-}
+  }
 
-.b01 h1 {
+  .b01 h1 {
     text-transform: uppercase;
-}
+  }
 
-.b02 {
+  .b02 {
     width: 100%;
     height: 450px;
 
-}
+  }
 
-.b02 img {
+  .b02 img {
 
     width: 400px;
     height: 450px;
     object-fit: cover;
     margin: 0 0 0 8vw;
 
-}
+  }
 
 
-/* acrds */
+  /* acrds */
 
-.seccion_02 {
-    background-image: url('../assets/nuevo/fondo2.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position-y: -60vh;
+  .seccion_02 {
+
     width: 100%;
     height: 100vh;
-}
+  }
 
-.seccion_02 h2 {
+  .seccion_02 h2 {
 
     margin-top: 80px;
     margin-bottom: 50px;
@@ -522,40 +520,40 @@ ul {
     color: #00AE44;
     font-weight: 800;
 
-}
+  }
 
-.cards {
+  .cards {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-}
+  }
 
-.card {
+  .card {
     width: 370px;
     height: 420px;
     margin: 0 10px;
     perspective: 1000px;
     border-radius: 10px;
-}
+  }
 
-.card .front,
-.card .back {
+  .card .front,
+  .card .back {
     width: 100%;
     height: 100%;
     position: absolute;
     backface-visibility: hidden;
-}
+  }
 
-.card .front {
+  .card .front {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     transition: transform 0.5s;
-}
+  }
 
-.card .back {
+  .card .back {
     display: none;
     padding: 20px;
     transform: rotateY(180deg);
@@ -564,74 +562,74 @@ ul {
     align-items: center;
     text-align: center;
     transition: transform 0.5s;
-}
+  }
 
-.card.flipped .front {
+  .card.flipped .front {
 
     transform: rotateY(-180deg);
-}
+  }
 
-.card.flipped .back {
+  .card.flipped .back {
     transform: rotateY(0deg);
     display: flex;
-}
+  }
 
-.card p {
+  .card p {
     width: 80%;
     text-align: center;
     color: white;
     font-weight: 500;
     font-size: 18px;
     position: relative;
-}
+  }
 
-.card .title {
+  .card .title {
     font-size: 24px;
     font-weight: 600;
     width: 50%;
 
-}
+  }
 
-.uno {
+  .uno {
     background-color: #00AE44;
     background-size: cover;
     position: relative;
 
-}
+  }
 
 
-.dos {
+  .dos {
     background-color: #009AA8;
     position: relative;
     background-size: cover;
 
-}
+  }
 
 
-.tres {
+  .tres {
     background-color: #005E6D;
     position: relative;
     background-size: cover;
 
-}
+  }
 
-.front .link {
+  .front .link {
     margin-top: 30PX;
     display: flex;
     justify-content: center;
     align-items: center;
 
-}
+  }
 
-.front .link:hover {
+  .front .link:hover {
     cursor: pointer;
     color: #f2f2f2;
 
-}
+  }
 
 
-/* SECCION 03 */
-.seccion_03 {
+  /* SECCION 03 */
+  .seccion_03 {
     background-image: url("../assets/nuevo/fondos3.png");
     width: 100%;
     height: 100vh;
@@ -643,23 +641,23 @@ ul {
     background-repeat: no-repeat;
     background-position-x: -10px;
     z-index: 1;
-}
+  }
 
 
 
-.calendario {
+  .calendario {
     width: 200vw;
 
 
 
-}
+  }
 
-.calendly-inline-widget {
+  .calendly-inline-widget {
     width: 100%;
     height: 570px;
-}
+  }
 
-.textos3 {
+  .textos3 {
     width: 90%;
     display: flex;
     flex-direction: column;
@@ -667,76 +665,74 @@ ul {
     align-items: center;
     padding: 0 90px;
 
-}
+  }
 
-.textos3 p {
+  .textos3 p {
     font-size: 2rem;
     color: #f2f2f2;
     font-weight: 400;
     margin-bottom: 20px;
     z-index: 2;
-}
+  }
 
-.textos3 span {
+  .textos3 span {
     font-size: 2.2rem;
     font-weight: 800;
-}
+  }
 
 
-/* seccion 4 */
-.seccion_04 {
-    background-image: url("../assets/nuevo/fondo2.1.png");
-    background-repeat: no-repeat;
-    background-position-y: -20vh;
+  /* seccion 4 */
+  .seccion_04 {
+
     width: 100%;
     height: 110vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
+  }
 
-.seccion_04 h2 {
+  .seccion_04 h2 {
     margin-top: 30px;
     font-size: 2rem;
     color: #00AE44;
     font-weight: 800;
     margin-bottom: 50px;
-}
+  }
 
-.grid-s4 {
+  .grid-s4 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     width: 1000px;
-    height: 100%;
-}
+    height: 100vh;
+  }
 
-.grid-s4 .numero {
+  .grid-s4 .numero {
     font-size: 30px;
     color: #00AE44;
     font-weight: 800;
 
 
-}
+  }
 
-.grid-s4 h4 {
+  .grid-s4 h4 {
     font-size: 20px;
     color: #059298;
     font-weight: 600;
     margin-top: 10px;
-}
+  }
 
-.grid-s4 p {
+  .grid-s4 p {
     width: 80%;
     font-size: 18px;
     color: #005E6D;
     font-weight: 500;
     margin-top: 10px;
-}
+  }
 
-/* SECCION05 */
+  /* SECCION05 */
 
-.seccion_05 {
+  .seccion_05 {
     width: 100%;
     height: 80vh;
     display: grid;
@@ -745,355 +741,355 @@ ul {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-}
+  }
 
-.seccion_05 div {
+  .seccion_05 div {
     margin: auto 20px;
-}
+  }
 
-.divp {
+  .divp {
     display: flex;
     flex-direction: column;
     align-items: end;
     padding: 0 5rem;
 
-}
+  }
 
-.seccion_05 p {
+  .seccion_05 p {
     text-align: end;
     width: 80%;
     font-size: 1.9rem;
     color: #00AE44;
     font-weight: 400;
     margin-bottom: 20px;
-}
+  }
 
-.seccion_05 span {
+  .seccion_05 span {
     font-size: 2rem;
     color: #00AE44;
     font-weight: 600;
     margin-bottom: 20px;
-}
+  }
 
-/* Formulario de contacto */
+  /* Formulario de contacto */
 
 
-.animate-bg {
+  .animate-bg {
     margin-left: 20px;
-}
+  }
 
-.container {
+  .container {
     padding-top: 10px;
     width: 680px;
     height: 380px;
     background-color: #fff;
-}
+  }
 
 
-#mc_embed_shell h2 {
+  #mc_embed_shell h2 {
     font-size: 15px;
     margin: 0;
     padding: 0;
     text-align: center;
-}
+  }
 
-/* seccion 6 */
-.seccion_06 {
+  /* seccion 6 */
+  .seccion_06 {
 
     width: 100%;
     height: 60vh;
     display: grid;
     grid-template-columns: 30% 5% 30% 5% 30%;
-}
+  }
 
-.seccion_06 div {
+  .seccion_06 div {
     text-align: center;
     margin: auto;
-}
+  }
 
-.seccion_06 h4 {
+  .seccion_06 h4 {
     font-size: 1.5rem;
     color: #005E6D;
     font-weight: 800;
     margin-bottom: 20px;
 
-}
+  }
 
-.seccion_06 p {
+  .seccion_06 p {
     font-size: 3rem;
     color: #00AE44;
     font-weight: 900;
     margin-bottom: 20px;
 
-}
+  }
 
-.seccion_06 span {
+  .seccion_06 span {
     margin: auto;
     width: 10px;
     height: 180px;
     background-color: #00AE44;
 
-}
+  }
 
-/* Footer Styles */
-.footer {
+  /* Footer Styles */
+  .footer {
     background-color: #005E6C;
-}
+  }
 
-.footer__container {
+  .footer__container {
     padding-top: 20px;
     padding-left: 100px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 2rem;
-}
+  }
 
-.footer__col h4 {
+  .footer__col h4 {
     margin-bottom: 1.5rem;
     font-size: 1.2rem;
     font-weight: 600;
     color: white
-}
+  }
 
-.footer__col p {
+  .footer__col p {
     margin-bottom: 1rem;
     color: white;
-}
+  }
 
-.footer__col a {
+  .footer__col a {
     display: block;
     margin-bottom: 1rem;
     color: white;
     transition: 0.3s;
-}
+  }
 
-.footer__col a span {
+  .footer__col a span {
     margin-right: 5px;
-}
+  }
 
-.footer__col a:hover {
+  .footer__col a:hover {
     color: #00AE45;
-}
+  }
 
-.footer__socials {
+  .footer__socials {
     display: flex;
     align-items: center;
     gap: 1rem;
-}
+  }
 
-.footer__socials span {
+  .footer__socials span {
     font-size: 1.5rem;
     color: white;
     cursor: pointer;
-}
+  }
 
-.footer__bar {
+  .footer__bar {
     padding: 1rem;
     font-size: 0.9rem;
     color: white;
     text-align: center;
-}
+  }
 
-a {
+  a {
     text-decoration: none;
-}
+  }
 
-.logo_negativo {
+  .logo_negativo {
     width: 200px;
     height: 100px;
-}
+  }
 
 
-/* RESPONSIVE */
+  /* RESPONSIVE */
 
-@media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 600px) {
     nav {
-        display: flex;
-        justify-content: space-between;
+      display: flex;
+      justify-content: space-between;
 
     }
 
     .menu {
-        display: flex;
-        width: 50px;
+      display: flex;
+      width: 50px;
 
     }
 
     nav ul {
-        display: none;
-        flex-direction: column;
+      display: none;
+      flex-direction: column;
     }
 
     .cambio {
-        display: flex;
+      display: flex;
     }
 
     nav ul li {
-        margin: 10px 0;
+      margin: 10px 0;
     }
 
     .banner {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 0;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 0;
 
     }
 
     .b01 {
-        padding: 0;
-        text-align: center;
-        justify-content: center;
-        align-items: center;
+      padding: 0;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
     }
 
     .b02 {
-        width: 100%;
-        display: flex;
-        justify-content: center;
+      width: 100%;
+      display: flex;
+      justify-content: center;
     }
 
     .b02 img {
-        width: 300px;
-        height: 300px;
-        margin: 0;
+      width: 300px;
+      height: 300px;
+      margin: 0;
     }
 
     .seccion_02 {
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background: none;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: none;
     }
 
     .cards {
-        gap: 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+      gap: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
 
     /* seccion 3 */
     .seccion_03 {
-        margin-top: 20px;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+      margin-top: 20px;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
 
     .textos3 {
-        padding: 10px;
-        text-align: center;
+      padding: 10px;
+      text-align: center;
     }
 
     .calendario {
-        width: 100%;
+      width: 100%;
     }
 
     .calendly-inline-widget {
-        width: 100%;
-        height: 500px;
+      width: 100%;
+      height: 500px;
     }
 
     /* seccion 4 */
     .seccion_04 {
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background: none;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: none;
     }
 
     .grid-s4 {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
 
     .grid-s4 div {
-        margin: 20px 50px;
+      margin: 20px 50px;
     }
 
     /* seccion 5 */
     .seccion_05 {
-        margin-top: 20px;
-        height: 100%;
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: center;
-        align-items: center;
-        background: none;
+      margin-top: 20px;
+      height: 100%;
+      display: flex;
+      flex-direction: column-reverse;
+      justify-content: center;
+      align-items: center;
+      background: none;
     }
 
     .divp {
-        padding: 0;
-        text-align: center;
+      padding: 0;
+      text-align: center;
     }
 
     #mc_embed_shell {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 20px 20px 0 0;
-        background-color: aliceblue;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 20px 20px 0 0;
+      background-color: aliceblue;
 
     }
 
     /* seccion 6 */
     .seccion_06 {
-        margin-top: 30px;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background: none;
+      margin-top: 30px;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: none;
     }
 
     .seccion_06 span {
-        width: 280px;
-        height: 10px;
-        margin-bottom: 20px;
+      width: 280px;
+      height: 10px;
+      margin-bottom: 20px;
     }
 
     /* Footer Styles */
     .footer__container {
-        padding: 20px;
+      padding: 20px;
     }
 
     .footer__col h4 {
-        font-size: 20px;
+      font-size: 20px;
     }
 
     .footer__col p {
-        font-size: 16px;
+      font-size: 16px;
     }
 
     .footer__socials span {
-        font-size: 24px;
+      font-size: 24px;
     }
 
     .footer__bar {
-        font-size: 16px;
+      font-size: 16px;
     }
 
     .logo_negativo {
-        width: 100px;
-        height: 50px;
+      width: 100px;
+      height: 50px;
     }
 
 
-}
+  }
 </style>
 
 
