--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
   <section class="seccion_04">
     <h2>BENEFICIOS</h2>
     <div class="grid-s4">
-      <div>
+
+      <div class="contenedors4">
         <div class="numero">
           01
 
@@ -167,7 +168,8 @@
         <p>Te informamos desde el inicio qué tantas ganancias podrás recibir de la inversión en un largo o mediano
           plazo.</p>
       </div>
-      <div>
+
+      <div class="contenedors4">
         <div class="numero">
           02
 
@@ -176,7 +178,8 @@
         <p>Rentabilizamos tu dinero para que no se mantenga estancado a medida que pasa el tiempo.</p>
 
       </div>
-      <div>
+
+      <div class="contenedors4">
         <div class="numero">
           03
 
@@ -185,8 +188,11 @@
         <p>Ponemos los papeles sobre la mesa para que decidas invertir de manera segura.</p>
       </div>
 
-      <div></div>
-      <div>
+      <div class="contenedors4">
+        >
+      </div>
+
+      <div class="contenedors4">
         <div class="numero">
           04
 
@@ -195,7 +201,7 @@
         <p>Contamos con oportunidades de inversión en sectores desatendidos y de gran potencial.</p>
       </div>
 
-      <div>
+      <div class="contenedors4">
         <div class="numero">
           05
 
@@ -210,49 +216,63 @@
   </section>
 
   <section class="seccion_05" id="contact">
-    <div>
-      <section class="container section_div" id="contacto">
-        <div class="contenedor">
-          <div id="mc_embed_shell">
-            <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
-            <div id="mc_embed_signup">
-              <form
-                action="https://vive-rentable.us8.list-manage.com/subscribe/post?u=8b7f686722931bd734a2e7d9b&amp;id=5ce211eaf0&amp;f_id=001202e0f0"
-                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                target="_self" novalidate="">
-                <div id="mc_embed_signup_scroll">
-                  <h2>Suscríbete</h2>
-                  <div class="indicates-required"><span class="asterisk">*</span> campos requeridos</div>
-                  <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
-                        class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email"
-                      id="mce-EMAIL" required="" value=""></div>
-                  <div class="mc-field-group"><label for="mce-FNAME">Nombre </label><input type="text" name="FNAME"
-                      class=" text" id="mce-FNAME" value=""></div>
-                  <div class="mc-field-group"><label for="mce-PHONE">Número de teléfono </label><input type="text"
-                      name="PHONE" class="REQ_CSS" id="mce-PHONE" value=""></div>
-                  <div hidden=""><input type="hidden" name="tags" value="5179777"></div>
-                  <div id="mce-responses" class="clear">
-                    <div class="response" id="mce-error-response" style="display: none;"></div>
-                    <div class="response" id="mce-success-response" style="display: none;"></div>
-                  </div>
-                  <div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text"
-                      name="b_8b7f686722931bd734a2e7d9b_5ce211eaf0" tabindex="-1" value=""></div>
-                  <div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
-                      value="Suscríbete"></div>
-                </div>
-              </form>
-            </div>
-          </div>
 
+    <section class="container section_div" id="contacto">
+      <div class="contenedor">
+        <div id="mc_embed_shell">
+          <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+
+          <div id="mc_embed_signup">
+            <form
+              action="https://vive-rentable.us8.list-manage.com/subscribe/post?u=8b7f686722931bd734a2e7d9b&amp;id=5ce211eaf0&amp;f_id=001202e0f0"
+              method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+              target="_blank">
+              <div id="mc_embed_signup_scroll" class="animate-bg">
+                <h4>Suscribete a nuestra Newsletter</h4>
+                <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
+                      class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email"
+                    id="mce-EMAIL" required="" value=""></div>
+                <div class="mc-field-group"><label for="mce-FNAME">Nombre </label><input type="text" name="FNAME"
+                    class=" text" id="mce-FNAME" value=""></div>
+                <div class="mc-field-group"><label for="mce-PHONE">Número de teléfono </label><input type="text"
+                    name="PHONE" class="REQ_CSS" id="mce-PHONE" value=""></div>
+                <div hidden=""><input type="hidden" name="tags" value="5179777"></div>
+                <div id="mce-responses" class="clear foot">
+                  <div class="response" id="mce-error-response" style="display: none;"></div>
+                  <div class="response" id="mce-success-response" style="display: none;"></div>
+                </div>
+                <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                  <input type="text" name="b_8b7f686722931bd734a2e7d9b_5ce211eaf0" tabindex="-1" value="">
+                </div>
+                <div class="optionalParent">
+                  <div class="clear foot">
+                    <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Enviar">
+                    <p style="margin: 0px auto;"><a href="http://eepurl.com/iJLt9s"
+                        title="Mailchimp - email marketing made easy and fun"><span
+                          style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
+                            class="refferal_badge"
+                            src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
+                            alt="Intuit Mailchimp"
+                            style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+          <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+          <script
+            type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
         </div>
 
+      </div>
 
-      </section>
 
-    </div>
-    <div class="divp">
-      <p><span>¡Suscríbete ahora!</span>
-        y estarás al tanto de las ultimas novedades de tu proxima inversión</p>
+    </section>
+    <div class="s03">
+      <p><span>¡Suscríbete ahora!</span> <br>y estarás al tanto de <br> las ultimas novedades de tu <br> proxima
+        inversión</p>
     </div>
 
   </section>
@@ -731,67 +751,67 @@
   }
 
   /* SECCION05 */
-
   .seccion_05 {
+    background-image: url("../assets/nuevo/fondos5.png");
     width: 100%;
-    height: 80vh;
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    background-image: url("../assets/nuevo/fondos5.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-
-  .seccion_05 div {
-    margin: auto 20px;
-  }
-
-  .divp {
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    padding: 0 5rem;
 
   }
 
-  .seccion_05 p {
+  .s03 {
+    width: 90%;
+    margin: auto;
+    padding-left: 30px;
+  }
+
+  .s03 h2 {
+    font-style: italic;
+    color: #00AE44;
+    font-size: 30px;
+    margin-bottom: 20px;
+  }
+
+  .s03 span {
+    font-size: 30px;
+    color: #00AE44;
+    font-weight: 800;
+    margin-bottom: 20px;
+
+  }
+
+  .s03 p {
+    font-style: italic;
+    width: 100%;
     text-align: end;
-    width: 80%;
-    font-size: 1.9rem;
     color: #00AE44;
-    font-weight: 400;
+    font-size: 28px;
     margin-bottom: 20px;
+    font-weight: 300;
+    padding-right: 4rem;
   }
 
-  .seccion_05 span {
-    font-size: 2rem;
-    color: #00AE44;
-    font-weight: 600;
-    margin-bottom: 20px;
+  .container {
+    padding: 20px;
+  }
+
+  .contenedor {
+
+    background-color: #fff;
+  }
+
+  .animate-bg h4 {
+    text-align: center;
+  }
+
+  .animate-bg {
+    padding: 10px;
   }
 
   /* Formulario de contacto */
 
 
-  .animate-bg {
-    margin-left: 20px;
-  }
-
-  .container {
-    padding-top: 10px;
-    width: 680px;
-    height: 380px;
-    background-color: #fff;
-  }
-
-
-  #mc_embed_shell h2 {
-    font-size: 15px;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  }
 
   /* seccion 6 */
   .seccion_06 {
@@ -958,6 +978,7 @@
 
     .seccion_02 {
       height: 100%;
+      height: 100%;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -975,6 +996,7 @@
 
     /* seccion 3 */
     .seccion_03 {
+      width: 100%;
       margin-top: 20px;
       height: 100%;
       display: flex;
@@ -999,12 +1021,19 @@
 
     /* seccion 4 */
     .seccion_04 {
+      width: 100%;
+      margin-top: 20px;
       height: 100%;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background: none;
+
+    }
+
+    .seccion_04 h2 {
+      padding-bottom: 3rem;
+
     }
 
     .grid-s4 {
@@ -1015,38 +1044,50 @@
       align-items: center;
     }
 
-    .grid-s4 div {
-      margin: 20px 50px;
+    .contenedors4 {
+      display: flex;
+      flex-direction: column;
+      padding-left: 3rem;
+
+
     }
+
+    .contenedors4 h4 {
+      font-size: 20px;
+      color: #059298;
+      font-weight: 600;
+    }
+
+    .contenedors4 p {
+      margin-bottom: 2.5rem;
+    }
+
+
+
 
     /* seccion 5 */
     .seccion_05 {
-      margin-top: 20px;
-      height: 100%;
+      margin-top: 50px;
       display: flex;
-      flex-direction: column-reverse;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
       background: none;
     }
 
-    .divp {
-      padding: 0;
-      text-align: center;
+    .s03 h2 {
+      font-size: 20px;
+      margin: 20px 0;
     }
 
-    #mc_embed_shell {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin: 20px 20px 0 0;
-      background-color: aliceblue;
-
+    .s03 p {
+      font-size: 20px;
+      margin: 20px 0;
     }
+
 
     /* seccion 6 */
     .seccion_06 {
+      width: 100%;
       margin-top: 30px;
       height: 100%;
       display: flex;
@@ -1091,6 +1132,8 @@
 
   }
 </style>
+
+
 
 
 <script>
