--- a/index.html
+++ b/index.html
@@ -221,15 +221,14 @@
       <div class="contenedor">
         <div id="mc_embed_shell">
           <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
-
           <div id="mc_embed_signup">
             <form
               action="https://vive-rentable.us8.list-manage.com/subscribe/post?u=8b7f686722931bd734a2e7d9b&amp;id=5ce211eaf0&amp;f_id=001202e0f0"
               method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-              target="_blank">
-              <div id="mc_embed_signup_scroll" class="animate-bg">
-                <h4>Suscribete a nuestra Newsletter</h4>
-                <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+              target="_self" novalidate="">
+              <div id="mc_embed_signup_scroll">
+                <h2>Suscríbete</h2>
+                <div class="indicates-required"><span class="asterisk">*</span>Campos requeridos</div>
                 <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
                       class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email"
                     id="mce-EMAIL" required="" value=""></div>
@@ -238,32 +237,17 @@
                 <div class="mc-field-group"><label for="mce-PHONE">Número de teléfono </label><input type="text"
                     name="PHONE" class="REQ_CSS" id="mce-PHONE" value=""></div>
                 <div hidden=""><input type="hidden" name="tags" value="5179777"></div>
-                <div id="mce-responses" class="clear foot">
+                <div id="mce-responses" class="clear">
                   <div class="response" id="mce-error-response" style="display: none;"></div>
                   <div class="response" id="mce-success-response" style="display: none;"></div>
                 </div>
-                <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                  <input type="text" name="b_8b7f686722931bd734a2e7d9b_5ce211eaf0" tabindex="-1" value="">
-                </div>
-                <div class="optionalParent">
-                  <div class="clear foot">
-                    <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Enviar">
-                    <p style="margin: 0px auto;"><a href="http://eepurl.com/iJLt9s"
-                        title="Mailchimp - email marketing made easy and fun"><span
-                          style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
-                            class="refferal_badge"
-                            src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
-                            alt="Intuit Mailchimp"
-                            style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
-                    </p>
-                  </div>
-                </div>
+                <div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text"
+                    name="b_8b7f686722931bd734a2e7d9b_5ce211eaf0" tabindex="-1" value=""></div>
+                <div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
+                    value="Suscribirse"></div>
               </div>
             </form>
           </div>
-          <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-          <script
-            type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
         </div>
 
       </div>
@@ -950,6 +934,7 @@
 
     .banner {
       width: 100%;
+      height: 100%;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -1022,6 +1007,7 @@
     /* seccion 4 */
     .seccion_04 {
       width: 100%;
+      height: 100%;
       margin-top: 20px;
       height: 100%;
       display: flex;
@@ -1037,6 +1023,7 @@
     }
 
     .grid-s4 {
+      height: auto;
       width: 100%;
       display: flex;
       flex-direction: column;
@@ -1067,7 +1054,7 @@
 
     /* seccion 5 */
     .seccion_05 {
-      margin-top: 50px;
+      margin-top: 1rem;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -1132,6 +1119,8 @@
 
   }
 </style>
+
+
 
 
 
